# SafePay-Agent

./: .gitignore  README.md  dashboard.py  main.py  pyproject.toml
data/invoices/: Agent_Development_Internship_Task.docx  README.md
output/: results.json
src/: graph.py
src/agents/: discrepancy.py  doc_intelligence.py  matching.py  resolution.py  verifier.py
src/core/: database.py  state.py
